--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -24,9 +25,11 @@
     "react": "^18.2.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.4",
+    "react-native-appearance": "^0.3.4",
     "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.9.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
